--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Fork of the Mobile Portfolio to optimize for PageSpeed Insights">
     <meta name="author" content="Sandra Rae">
-    <title>Cameron Pittman: Portfolio</title>
+    <title>Sandra Rae: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
@@ -22,12 +22,12 @@
       ga('send', 'pageview');
     </script>
     <script src="http://www.google-analytics.com/analytics.js" async></script>
-    <script async src="js/perfmatters.js"></script>
+    <script src="js/perfmatters.js" async></script>
   </head>
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="/"><img src="img/SandraCloseup.jpg"></a>
       <p>Sandra Rae<br><span>Web Developer</span></p>
     </header>
 
