--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/SandraCloseup.jpg"></a>
-      <p>Sandra Rae<br><span>Web Developer</span></p>
+      <a href="/"><img src="img/SandraCloseup.jpg" style="width: 200px;"></a>
+      <p>Sandra Rae<br><span>Web &amp; Information Designer</span></p>
     </header>
 
     <div class="container">
