--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/SandraCloseup.jpg" style="width: 200px;"></a>
+      <a href="/"><img src="img/SandraCloseup.jpg" /></a>
       <p>Sandra Rae<br><span>Web &amp; Information Designer</span></p>
     </header>
 
@@ -65,7 +65,7 @@
       </div>
 
       <footer>
-        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+        <p>&copy; Web Performance 2018 <span id="crp-stats"></span></p>
       </footer>
     </div>
   </body>
