--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/SandraCloseup.jpg" /></a>
+      <a href="/"><img src="img/SandraCloseup-opt.jpg" /></a>
       <p>Sandra Rae<br><span>Web &amp; Information Designer</span></p>
     </header>
 
