--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Fork of the Mobile Portfolio to optimize for PageSpeed Insights">
-    <meta name="author" content="Sandra Rae">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Fork of the Mobile Portfolio to optimize for PageSpeed Insights" />
+    <meta name="author" content="Sandra Rae" />
     <title>Sandra Rae: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/print.css" rel="stylesheet" media="print" />
+    <link href="css/style-portrait.css" rel="stylesheet" media="orientation:portrait" />
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
