--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
           <li>
             <img style="width: 100px;" src="views/images/pizzeria-18.jpg">
-            <a href="views/pizza.html">Cam's Pizzeria</a>
+            <a href="views/pizza.html">Sandra's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
         </ul>
